# fs_task

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_eval.sh  run_train.sh  setup_env.sh
Notebooks/: check_muon.ipynb  dataset_viewer.ipynb
configs/: adamw_lora.yaml  adamw_lora_lr1e3.yaml  adamw_lora_lr1e4.yaml  adamw_lora_lr3e3.yaml  adamw_lora_lr3e4.yaml  adamw_lora_small.yaml  best_eval.yaml  muon_lora.yaml  muon_lora_lr1e2.yaml  muon_lora_lr1e3.yaml  muon_lora_lr3e3.yaml  muon_lora_lr3e4.yaml  template.yaml
logs/: all_train_logs.csv  best_runs.csv  pip_freeze.txt  run_metrics.csv  summary_table.csv  torch_env.txt
outputs/adamw_lora/: adapter_model.safetensors  config_used.json  summary.json  train_log.jsonl
outputs/adamw_lora_lr1e3/: adapter_model.safetensors  config_used.json  summary.json  train_log.jsonl
outputs/adamw_lora_lr1e4/: adapter_model.safetensors  config_used.json  summary.json  train_log.jsonl
outputs/adamw_lora_lr3e3/: adapter_model.safetensors  config_used.json  summary.json  train_log.jsonl
outputs/adamw_lora_lr3e4/: adapter_model.safetensors  config_used.json  summary.json  train_log.jsonl
reports/: piqa_summary.csv  report.tex  run_metrics.csv
scripts/: aggregate_results.py  collect_piqa_results.py  eval_base_piqa.sh  eval_best_runs.sh  eval_piqa.sh  export_merged_model.py  install_eval.sh  run_config.sh  run_lr_experiment copy.sh  run_lr_experiment.sh  run_train.sh  save_env.sh  train_adamw.sh  train_adamw_small.sh  train_muon.sh
src/: collate.py  data.py  modeling.py  train.py  train_utils.py
src/optim/: adamw.py  (+2 more)
(+25 files in other folders)
